--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organ Transplant Management System</title>
+    <title>Organ Transplant Matching System</title>
     <style>
         * {
             margin: 0;
@@ -342,7 +342,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🫀 Organ Transplant Management System</h1>
+            <h1>🫀 Organ Transplant Matching System</h1>
             <p class="subtitle">Connecting Life Savers with Lives in Need</p>
         </header>
 
